# pedantic

./: .gitmodules  CMakeLists.txt  README.md  counter.py  dqbf_solver.py  dqcir_parser.py
src/: counter.hpp  dqbf_solver.cpp  dqbf_solver.hpp  dqbf_solver_main.cpp  dqcir_parser.cpp  dqcir_parser.hpp
